Add `runStmt` for executing IO statements and binding new names

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Daniel Wagner
 Evan Laforge
 Fernando Benavides
 Gwern Branwen
+Heinrich Apfelmus
 Jean Philippe Bernardy
 Jens Petersen
 Mark Wright
